--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
     "deploy": "docusaurus deploy"
   },
   "dependencies": {
-    "@docusaurus/core": "^2.0.0-alpha.56",
-    "@docusaurus/preset-classic": "^2.0.0-alpha.56",
+    "@docusaurus/core": "2.0.0-alpha.61",
+    "@docusaurus/preset-classic": "2.0.0-alpha.61",
     "classnames": "^2.2.6",
-    "docusaurus-lunr-search": "^2.0.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4"
   },
